fix collapse

--- a/style.scss
+++ b/style.scss
@@ -224,6 +224,7 @@ nav {
 
 .leftspace {
 	margin-left: 230px;
+	width: 100%;
 }
 
 #main {
